Modified response to make generated client easier to work with
